--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- font awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" >
     <!-- input CSS -->
     <link rel="stylesheet" href="css/input.css">
 </head>
@@ -52,7 +52,7 @@
 
     <!-- Access section -->
     <section class="access">
-        <h1 class="section-title">What You Can Access</h1>
+        <h2 class="section-title">What You Can Access</h2>
         <p class="section-info">Our free Figma templates are divided into assorted sections.</p>
         <div class="row">
             <div class="access-col">
@@ -75,7 +75,7 @@
     </section>
     <!-- website design section -->
     <section class="web-design">
-        <h1 class="section-title">Website Designs</h1>
+        <h2 class="section-title">Website Designs</h2>
         <div class="row">
             <div class="web-col">
                 <div class="card">
@@ -107,25 +107,25 @@
 
     <!-- section -->
     <section class="web-design">
-        <h1 class="section-title">Mobile Apps And Interfaces</h1>
+        <h2 class="section-title">Mobile Apps And Interfaces</h2>
         <div class="row">
             <div class="web-col">
                 <div class="card">
-                    <img src="images/second one.png" alt="">
+                    <img src="images/second-one.png" alt="">
                     <div class="layer"><a href="#">Learn More</a></div>
                 </div>
                 <h2>Supermarket Mobile App</h2>
             </div>
             <div class="web-col">
                 <div class="card">
-                    <img src="images/secont two.png" alt="">
+                    <img src="images/secont-two.png" alt="">
                     <div class="layer"><a href="#">Learn More</a></div>
                 </div>
                 <h2>Money Transfer App Kit</h2>
             </div>
             <div class="web-col">
                 <div class="card">
-                    <img src="images/second three.png" alt="">
+                    <img src="images/second-three.png" alt="">
                     <div class="layer"><a href="#">Learn More</a></div>
                 </div>
                 <h2>Pet's Mobile App</h2>
@@ -137,25 +137,25 @@
     </section>
     <!-- section -->
     <section class="web-design">
-        <h1 class="section-title">Illustrations And Icons</h1>
+        <h2 class="section-title">Illustrations And Icons</h2>
         <div class="row">
             <div class="web-col">
                 <div class="card">
-                    <img src="images/third one.png" alt="">
+                    <img src="images/third-one.png" alt="">
                     <div class="layer"><a href="#">Learn More</a></div>
                 </div>
                 <h2>Ultimate Icon's Library</h2>
             </div>
             <div class="web-col">
                 <div class="card">
-                    <img src="images/third two.png" alt="">
+                    <img src="images/third-two.png" alt="">
                     <div class="layer"><a href="#">Learn More</a></div>
                 </div>
                 <h2>Iphone 15 Pro Mockups</h2>
             </div>
             <div class="web-col">
                 <div class="card">
-                    <img src="images/third three.png" alt="">
+                    <img src="images/third-three.png" alt="">
                     <div class="layer"><a href="#">Learn More</a></div>
                 </div>
                 <h2>Bootstrap 5 Design System</h2>
@@ -167,11 +167,11 @@
     </section>
     <!-- section -->
     <section class="web-design">
-        <h1 class="section-title">Wireframes And Design System</h1>
+        <h2 class="section-title">Wireframes And Design System</h2>
         <div class="row">
             <div class="web-col">
                 <div class="card">
-                    <img src="images/third tree.png" alt="">
+                    <img src="images/third-tree.png" alt="">
                     <div class="layer"><a href="#">Learn More</a></div>
                 </div>
                 <h2>Tshirt Mockups Free in Figma</h2>
@@ -197,7 +197,7 @@
     </section>
     <!-- section -->
     <section class="web-design">
-        <h1 class="section-title">Figjam UX Templates</h1>
+        <h2 class="section-title">Figjam UX Templates</h2>
         <div class="row">
             <div class="web-col">
                 <div class="card">
